# PythonHacking

./: CMakeLists.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
CPP_Files/NetworkTools/NetSpeed/: ReturnFileContents.cpp  ReturnFileContents.h  differencec.cpp  differencec.h  main.cpp
CPP_Files/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
CPP_Files/nbproject/private/: private.xml
Main/: NetTools.py
NetworkTools/: netspeed.cpp  netspeedplot.py  port-scanning.py
Snippets/NetAssistant/WebTools/: downloadWebpage.py
